--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -15,3 +15,14 @@ h1 {
     padding-top: 2rem;
     font-size: 4rem;
 }
+
+.datos {
+background-color: #ffa7de;
+width: 100%;
+height: 20rem;
+}
+
+.redes-fondo {
+  background-color: #ffa7de;
+}
+
